--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "[![Actions Status](https://github.com/ishchts/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/ishchts/frontend-project-44/actions)",
   "main": "index.js",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/ishchts/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/ishchts/frontend-project-44#readme"
+  "homepage": "https://github.com/ishchts/frontend-project-44#readme",
+  "dependencies": {
+    "readline-sync": "1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "8.41.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.27.5"
+  }
 }
